Dodat jwt i proradio je singup